--- a/PortfelElektroniczny/app/templates/app/layout.html
+++ b/PortfelElektroniczny/app/templates/app/layout.html
@@ -39,7 +39,7 @@
 {% block content %}{% endblock %}
         <hr/>
         <footer>
-            <p>&copy; {{ year }} - Portfel Elektroniczny</p>
+            <p>&copy; {{ year }} - Portfel Elektroniczny v.0.0.0</p>
         </footer>
     </div>
 
