--- a/PortfelElektroniczny/app/templates/app/dochody.html
+++ b/PortfelElektroniczny/app/templates/app/dochody.html
@@ -4,6 +4,6 @@
 
 <h2>{{ title }}</h2>
 
-
+<p><a href="login/" class="btn btn-primary btn-large">Zatwierdz &raquo;</a> </p>
 <p></p>
 {% endblock %}
