--- a/PortfelElektroniczny/app/templates/app/rejestracja.html
+++ b/PortfelElektroniczny/app/templates/app/rejestracja.html
@@ -13,7 +13,7 @@
 				<div class="form-group">
 					<label for="id_username" class="col-md-2 control-label">Login</label>
 					<div class="col-md-10">
-						{{ form.username }}
+						{{ form.first_name }}
 					</div>
 				</div>
 				<div class="form-group">
