--- a/PortfelElektroniczny/app/templates/app/layout.html
+++ b/PortfelElektroniczny/app/templates/app/layout.html
@@ -28,6 +28,7 @@
                     <li><a href="{% url 'dochody' %}">Dochody</a></li>
                     <li><a href="{% url 'wydatki' %}">Wydatki</a></li>
                     <li><a href="{% url 'bilans' %}">Bilans</a></li>
+                    <li><a href="{% url 'wpisy' %}">Wpisy</a></li>
                     {% endif %}
                 </ul>
                 {% include 'app/loginpartial.html' %}
