--- a/PortfelElektroniczny/app/templates/app/about.html
+++ b/PortfelElektroniczny/app/templates/app/about.html
@@ -8,7 +8,12 @@
 <p>Aplikacja sluzy do zarzadzania wydatkami</p>
 
 {% for post in posts %}
-    {{ post }}
+  <div class="jumbotron">
+
+        <h1>{{ post.title }}</h1>
+        <p><font size=5 >{{ post.text|linebreaksbr }}</font></p>
+        <p align ="right"><font size=2 >published: {{ post.published_date }}</font></p>
+   </div>
 {% endfor %}
 
 {% endblock %}
