--- a/PortfelElektroniczny/app/templates/app/rejestracja.html
+++ b/PortfelElektroniczny/app/templates/app/rejestracja.html
@@ -1,56 +1,9 @@
-﻿{% extends "app/layout.html" %}
-
-{% block content %}
-
-<h2>{{ title }}</h2>
-<div class="row">
-	<div class="col-md-8">
-		<section id="loginForm">
-			<form action="." method="post" class="form-horizontal">
-				{% csrf_token %}
-				<h4>Wprowadz dane aby zalozyc konto</h4>
-				<hr />
-				<div class="form-group">
-					<label for="id_username" class="col-md-2 control-label">Login</label>
-					<div class="col-md-10">
-						{{ form.first_name }}
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="id_password" class="col-md-2 control-label">Haslo</label>
-					<div class="col-md-10">
-						{{ form.password }}
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="id_password" class="col-md-2 control-label">Wpisz haslo ponownie</label>
-					<div class="col-md-10">
-						{{ form.password }}
-					</div>
-				</div>
-				<div class="form-group">
-					<div class="col-md-offset-2 col-md-10">
-						<input type="hidden" name="next" value="/" />
-						<input type="submit" value="Stworz" class="btn btn-default" />
-					</div>
-				</div>
-				{% if form.errors %}
-				<p class="validation-summary-errors">Niepoprawna nazwa uzytkownika lub haslo. Podaj prawidlowe dane.</p>
-				{% endif %}
-			</form>
-		</section>
-	</div>
-	<div class="col-md-4">
-		<section id="socialLoginForm"></section>
-	</div>
-</div>
-
-{% endblock %}
-
-
-{% block scripts %}
-
-    {% load staticfiles %}
-<script src="{% static 'app/scripts/jquery.validate.min.js' %}"></script>
+﻿{% block content %}
+<h1>Rejestracja</h1>
+<form method="post" action=".">
+        {{ form.as_p }}
+        {% csrf_token %}
+        <input type="submit" value="Submit">
+</form>
 
 {% endblock %}
