--- a/PortfelElektroniczny/app/templates/app/rejestracja.html
+++ b/PortfelElektroniczny/app/templates/app/rejestracja.html
@@ -1,6 +1,7 @@
-﻿{% block content %}
+﻿{% extends "app/layout.html" %}
+{% block content %}
 <h1>Rejestracja</h1>
-<form method="post" action=".">
+<form method="post">
         {{ form.as_p }}
         {% csrf_token %}
         <input type="submit" value="Submit">
