--- a/PortfelElektroniczny/app/templates/app/dochody.html
+++ b/PortfelElektroniczny/app/templates/app/dochody.html
@@ -5,8 +5,9 @@
 <h2>{{ title }}</h2>
 <p>
     {{portfel.current_balance}}
+
     
 </p>
 
-<p></p>
+<p><a href="dodajDochod" class="btn btn-primary btn-large">Dodaj Dochod &raquo;</a></p>
 {% endblock %}
