--- a/PortfelElektroniczny/app/templates/app/rejestracja.html
+++ b/PortfelElektroniczny/app/templates/app/rejestracja.html
@@ -1,10 +1,12 @@
 ﻿{% extends "app/layout.html" %}
 {% block content %}
 <h1>Rejestracja</h1>
+
 <form method="post">
         {{ form.as_p }}
         {% csrf_token %}
-        <input type="submit" value="Submit">
+        <input type="submit" value="Zarejestruj!" class="btn btn-default">
 </form>
+
 
 {% endblock %}
