--- a/PortfelElektroniczny/app/templates/app/dodajWydatek.html
+++ b/PortfelElektroniczny/app/templates/app/dodajWydatek.html
@@ -5,10 +5,10 @@
 <h2>{{ title }}</h2>
 <div class="row">
     <div class="col-md-8">
-        <section id="DodajDochodForm">
+        <section id="DodajWydatekForm">
             <form action="." method="POST" class="form-horizontal">
                 {% csrf_token %}
-                <h4>Dodaj swoj dochod</h4>
+                <h4>Dodaj swoj Wydatek</h4>
                 <hr />
                 <div class="form-group">
                     <label for ="amount"class="col-md-2 control-label">Kwota</label>
@@ -28,11 +28,10 @@
                         {{ form.category}}
                     </div>
                 </div>
-          
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                       
-                        <button type="submit" value="Dodaj dochod" class="save btn btn-default" />
+                        <button type="submit" value="Dodaj Wydatek" class="save btn btn-default" />
                     </div>
                 </div>
                 
