--- a/PortfelElektroniczny/app/templates/app/wydatki.html
+++ b/PortfelElektroniczny/app/templates/app/wydatki.html
@@ -5,5 +5,5 @@
 <h2>{{ title }}</h2>
 
 
-<p></p>
+<p><a href="dodajWydatek" class="btn btn-primary btn-large">Dodaj Wydatek &raquo;</a></p>
 {% endblock %}
