--- a/PortfelElektroniczny/app/templates/app/dodajDochod.html
+++ b/PortfelElektroniczny/app/templates/app/dodajDochod.html
@@ -3,44 +3,11 @@
 {% block content %}
 
 <h2>{{ title }}</h2>
-<div class="row">
-    <div class="col-md-8">
-        <section id="DodajDochodForm">
-            <form action="." method="POST" class="form-horizontal">
-                {% csrf_token %}
-                <h4>Dodaj swoj dochod</h4>
-                <hr />
-                <div class="form-group">
-                    <label for ="amount"class="col-md-2 control-label">Kwota</label>
-                    <div class="col-md-10">
-                        {{ form.amount}}
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="description" class="col-md-2 control-label">Opis</label>
-                    <div class="col-md-10">
-                        {{ form.description }}
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="category" class="col-md-2 control-label">Kategoria</label>
-                    <div class="col-md-10">
-                        {{ form.category}}
-                    </div>
-                </div>
-          
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                      
-                        <button type="submit" value="Dodaj dochod" class="save btn btn-default" />
-                    </div>
-                </div>
-                
-            </form>
-        </section>
-    </div>
-    
-</div>
+<<form method="post">
+        {{ form.as_p }}
+        {% csrf_token %}
+        <input type="submit" value="Dodaj" class="btn btn-default">
+</form>
 
 <p></p>
 {% endblock %}
